<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".data.Events.CreateEventPage">


    <TextView
        android:id="@+id/textView2"
        style="@style/text_box_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:text="Create Event "
        android:textAlignment="center"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/EventName"
        android:inputType ="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventDateCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/StartDate"
        android:inputType ="datetime"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventName" />

    <EditText
        android:id="@+id/eventDue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/DueDate"
        android:inputType ="datetime"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDateCreation" />

    <EditText
        android:id="@+id/eventNumberVolunteers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/Numvolunteer"
        android:inputType ="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDue" />

    <EditText
        android:id="@+id/eventOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/OriginPlace"
        android:inputType ="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventNumberVolunteers" />

    <EditText
        android:id="@+id/eventPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="Place where it will take place"
        android:inputType ="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventOrigin" />


    <TextView
        android:id="@+id/textView3"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:text="@string/Description"
        android:textAlignment="center"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventPlace" />

    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/Description"
        android:inputType ="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />


    <TextView
        android:id="@+id/textView4"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:text=" Event Image "
        android:textAlignment="center"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDescription" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/camera"
        android:onClick="Upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:text=" Upload Image "
        android:textAlignment="center"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <ImageView
        android:id="@+id/imageUp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/no_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDescription" />

    <Button
        style="@style/text_box_style"
        android:id="@+id/ButtonFinish"
        android:fontFamily="cursive"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:text="@string/CreateEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageUp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>